<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity" >
    
    <Button
        android:id="@+id/athletics_web_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginBottom="78dp"
        android:onClick="openWeb"
        android:text="@string/button_athletics_web" />

    <Button
        android:id="@+id/athletics_reg_im_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="17dp"
        android:onClick="openReg"
        android:text="@string/button_athletics_reg_im" />
    
    <TextView
        android:id="@+id/loadmessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:text="@string/loading" />
    
    <TextView
        android:id="@+id/feederror"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/rsserror"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/newslist"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageButton
        android:id="@+id/pause_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:background="@color/black_overlay"
        android:contentDescription="@string/pause"
        android:src="@drawable/pause_button" />
    
    <ImageButton
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/black_overlay"
        android:contentDescription="@string/play"
        android:src="@drawable/play_button" />

    <ProgressBar
        android:id="@+id/loadwheel"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal" />
    
    <com.darvds.ribbonmenu.RibbonMenuView
        android:id="@+id/ribbonMenuView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    </com.darvds.ribbonmenu.RibbonMenuView>

</FrameLayout>