<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Intramural" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/hello_world" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText android:ems="10" android:id="@+id/EditText02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/editText1" android:layout_centerHorizontal="true" android:inputType="textPersonName"/>
    <EditText android:ems="10" android:id="@+id/EditText01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/EditText02" android:layout_centerHorizontal="true" android:inputType="textPersonName"/>
    <EditText android:ems="10" android:id="@+id/EditText05" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/EditText01" android:layout_centerHorizontal="true" android:inputType="textPersonName"/>
    <EditText android:ems="10" android:id="@+id/EditText04" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/EditText05" android:layout_centerHorizontal="true" android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditText04"
        android:layout_below="@+id/EditText04"
        android:ems="10" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/radioButton1"
        android:layout_alignBottom="@+id/radioButton1"
        android:layout_toRightOf="@+id/radioButton1"
        android:text="@string/basketball" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/radioButton2"
        android:layout_alignBottom="@+id/radioButton2"
        android:layout_alignParentRight="true"
        android:text="@string/kickball" />

    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="56dp"
        android:text="@string/soccer" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:onClick="openConfirm"
       	android:text="@string/confirm" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radioButton2"
        android:layout_alignRight="@+id/textView1"
        android:ems="10"
        android:text="@string/choose" >

        <requestFocus />
    </EditText>
    
</RelativeLayout>