<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".About" >
    
    <ImageView
        android:id="@+id/eivind_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/eivind_pic" />


    <TextView
        android:id="@+id/eivind_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/eivind_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/about_eivind" />

    <ImageView
        android:id="@+id/haroon_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/eivind_about"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/haroon_pic" />

    <TextView
        android:id="@+id/haroon_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/haroon_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/about_haroon" />
    
    <ImageView 
        android:id="@+id/dariush_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/haroon_about"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/dariush_pic" />
    
    <TextView
        android:id="@+id/darius_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dariush_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/about_dariush" />
        
        

</RelativeLayout>
</ScrollView>